css/main.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  -webkit-text-size-adjust: 100%;
  height: 100%;
}

a:link,
a:visited,
a:hover,
a:active {
  color: #fff;
  text-decoration: none;
}

body {
  background-color: #222;
  color: #fff;
  font-family: "Montserrat", sans-serif;
  height: 100%;
}

button {
  background-color: transparent;
  border: 1px solid #d299ff;
  border-radius: 4px;
  box-sizing: border-box;
  color: #d299ff;
  cursor: pointer;
  display: inline-block;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: 600;
  height: 30px;
  letter-spacing: 0.1rem;
  line-height: 30px;
  margin: 0.5rem;
  padding: 0 20px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  white-space: nowrap;
}

button:hover,
button:focus {
  border-color: #fff;
  outline: 0;
}

footer {
  position: sticky;
  text-align: center;
}

h1 {
  color: #d299ff;
  font-size: 2rem;
  font-weight: bolder;
}

h2 {
  font-size: 1rem;
  font-weight: lighter;
}

header {
  text-align: center;
  width: 100%;
}

.answers {
  align-items: center;
  display: flex;
  flex-flow: column nowrap;
  order: 3;
}

.btn-close {
  background-color: #d299ff;
}

.btn-secondary {
  background-color: transparent;
  border: 1px solid #d299ff;
  border-radius: 4px;
  box-sizing: border-box;
  color: #d299ff;
  cursor: pointer;
  display: inline-block;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: 600;
  height: 30px;
  letter-spacing: 0.1rem;
  line-height: 30px;
  margin: 0.5rem;
  padding: 0 20px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  white-space: nowrap;
}

.btn-secondary:hover,
.btn-secondary:focus {
  background-color: transparent;
  border-color: #fff;
  color: #d299ff;
  outline: 0;
}

.buttonContainer {
  align-items: center;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  order: 5;
  width: 100%;
}

.content {
  align-items: stretch;
  display: none;
  flex-flow: column nowrap;
  justify-content: flex-start;
  margin: auto;
  max-width: 960px;
}

.diffButtons {
  width: 15rem;
}

.flavorTextContainer {
  margin: 0.25rem 0 0 0;
  max-width: 90%;
  text-align: center;
}

.getUserInput {
  align-content: center;
  align-items: center;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  order: 2;
  width: 100%;
}

.guessButtons {
  font-size: 0.6rem;
  letter-spacing: 0.025rem;
  width: 95%;
}

.historyCards {
  max-width: 95%;
}

.infoContainer {
  align-content: center;
  align-items: center;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  margin: 1rem 0 1rem 0;
  order: 1;
  width: 100%;
}

.levelDiv {
  text-align: left;
  width: 100%;
}

.levelColorText {
  color: #d299ff;
}

.lineBreaks {
  color: #d299ff;
  width: 100%;
  margin: 1rem 0;
  background-color: currentColor;
  border: 0;
  opacity: 1;
}

.lineBreaks:not([size]) {
  height: 1px;
}

.modal-content {
  background-color: #222;
}

.modal-header {
  color: #d299ff;
}

.signature {
  font-size: 0.75rem;
}

.topContainer {
  justify-content: space-evenly;
  display: flex;
  flex-flow: row nowrap;
  order: 3;
  margin: 0 0 0.5rem 0;
}

#answerBox {
  margin: 0 0 1.5rem 0;
  text-align: center;
}

#diffModal {
  overflow: auto;
  text-align: center;
  width: 100%;
  z-index: 1;
}

#diffQuestion {
  color: #d299ff;
  margin: 0 0 1rem 0;
}

#flavorText {
  font-size: 0.8rem;
  font-style: italic;
}

#heart {
  -webkit-text-fill-color: red;
  -webkit-text-stroke: 1px black;
}

#historyModalContent {
  align-items: center;
  display: flex;
  flex-flow: column;
}

#imageContainer {
  margin-bottom: 1rem;
}

#modalContent {
  align-content: center;
  align-items: center;
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-around;
  margin: 15% auto;
  padding: 20px;
  width: 80%;
}

#restart {
  display: none;
}

#scoreBox,
#timerBox {
  align-self: center;
  background-color: transparent;
  border: 1px solid #d299ff;
  border-radius: 4px;
  box-sizing: border-box;
  color: #d299ff;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: 600;
  height: 30px;
  letter-spacing: 0.1rem;
  line-height: 30px;
  margin: 0.5rem;
  width: 110px;
  padding: 0 20px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  white-space: nowrap;
}

#scoreBox:hover,
#scoreBox:focus,
#timerBox:hover,
#timerBox:focus {
  border-color: #fff;
  outline: 0;
}

#whatCard {
  margin-bottom: 10px;
  order: 2;
  text-align: center;
}

@media screen and (max-width: 695px) {
  footer {
    top: 100vh;
  }

  .content {
    flex: auto;
    flex-shrink: 0;
  }

  #cardArt {
    max-width: 25vw;
  }

  #currentCardArt {
    max-height: 50vw;
    max-width: 75vw;
  }
}

@media screen and (min-width: 696px) {
  footer {
    bottom: 0;
    color: #fff;
    margin: 0 10px 5px 0;
    position: fixed;
    right: 0;
  }

  h1 {
    font-size: 3rem;
    font-weight: bolder;
  }

  h2 {
    font-size: 1.5rem;
    font-weight: lighter;
  }

  header {
    margin-top: 3rem;
  }

  .content {
    justify-content: space-evenly;
  }

  .flavorTextContainer {
    max-width: 100%;
    text-align: center;
  }

  .getUserInput {
    margin: 1rem 0 1rem 0;
  }

  .guessButtons {
    font-size: 0.7rem;
    width: 30rem;
  }

  .signature {
    font-size: 1rem;
    margin: 0;
  }

  #flavorText {
    font-size: 1rem;
    font-style: italic;
  }

  #scoreBox {
    left: 0;
    margin: 10px 0 0 10px;
    position: fixed;
    top: 0;
  }

  #timerBox {
    right: 0;
    margin: 10px 10px 0 0;
    position: fixed;
    top: 0;
  }
}

